@@ -9161,6 +9161,16 @@ part parent "pwm3b"
   ;
 
 #------------------------------------------------------------
+# AT90PWM216
+#------------------------------------------------------------
+# Completely identical to AT90PWM316 (including the signature!)
+
+part parent "pwm316"
+     id = "pwm216";
+     desc = "AT90PWM216";
+  ; 
+
+#------------------------------------------------------------
 # ATtiny25
 #------------------------------------------------------------
 
